Wrong font in calendar dropdown, fixes #136

--- a/app/assets/stylesheets/addtocalendar.scss
+++ b/app/assets/stylesheets/addtocalendar.scss
@@ -107,3 +107,5 @@
 .atc-style-blue .atcb-item:hover {
     background: $text-blue;
 }
+
+.atcb-item-link { font-family: $body-font !important; }
